styles/nixos-search/catppuccin.user.less
/* ==UserStyle==
@name NixOS Search Catppuccin
@namespace github.com/catppuccin/userstyles/styles/nixos-search
@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/nixos-search
@version 2026.03.10
@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/nixos-search/catppuccin.user.less
@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Anixos-search
@description Soothing pastel theme for NixOS Search
@author Catppuccin
@license MIT

@preprocessor less
@var select lightFlavor "Light Flavor" ["latte:Latte*", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
@var select darkFlavor "Dark Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha*"]
@var select accentColor "Accent" ["rosewater:Rosewater", "flamingo:Flamingo", "pink:Pink", "mauve:Mauve*", "red:Red", "maroon:Maroon", "peach:Peach", "yellow:Yellow", "green:Green", "teal:Teal", "blue:Blue", "sapphire:Sapphire", "sky:Sky", "lavender:Lavender", "subtext0:Gray"]
==/UserStyle== */

@import "https://userstyles.catppuccin.com/lib/lib.less";

@-moz-document domain("search.nixos.org") {
  :root {
    @media (prefers-color-scheme: light) {
      #catppuccin(@lightFlavor);
    }
    @media (prefers-color-scheme: dark) {
      #catppuccin(@darkFlavor);
    }
  }

  #catppuccin(@flavor) {
    #lib.palette();
    #lib.defaults();

    --background-color: @base;
    --badge-background: @surface2;
    --button-active-background: @surface1;
    --button-active-hover-background: @surface2;
    --button-background: @surface0;
    --button-hover-background: @surface2;
    --color-active-hover-tab: @surface1;
    --color-active-tab: @surface0;
    --color-hover-tab: @surface1;
    --headerbar-background-color: @mantle;
    --hover-background: @surface0;
    --link-color: @accent;
    --info-label-background: @accent;
    --dark-blue: @accent;
    --light-blue: @accent; // used by focus outline
    --line-color: @surface0;
    --search-result-short-details-color: @subtext1;
    --search-result-divider-line-color: @surface0;
    --search-result-title-color: @accent;
    --search-sidebar-link-color: @text;
    --search-sidebar-selected-link-background: @accent;
    --search-sidebar-selected-link-color: @crust;
    --terminal-background: @surface0;
    --terminal-color: @text;
    --text-color: @text;
    --text-color-light: @text;
    --text-color-warning: @yellow;

    .badge {
      color: @text;
    }
    /* Experimental Flakes label */
    .label {
      color: @base;
      text-shadow: none;
    }
  }
}

